examples/test/testpolicy5821.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5821
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key22: value38
      key49: value23
      key41: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value27
      podSelector:
        matchLabels:
          key21: value42
